Fix overflow hidden

--- a/src/app/project/components/json-ui/json-ui.component.scss
+++ b/src/app/project/components/json-ui/json-ui.component.scss
@@ -75,6 +75,7 @@ input.value.boolean {
 .child.hidden {
     visibility: hidden;
     max-height: 0px;
+    overflow: hidden;
 }
 .parent,
 .text {
